# adapter/adapter.rest/adapter.rest.v3/src/main/java/at/tugraz/sss/adapter/rest/v3/link/SSRESTLink.java
@@ -1,0 +1,121 @@
+/**
+ * Code contributed to the Learning Layers project
+ * http://www.learning-layers.eu
+ * Development is partly funded by the FP7 Programme of the European Commission under
+ * Grant Agreement FP7-ICT-318209.
+ * Copyright (c) 2016, Graz University of Technology - KTI (Knowledge Technologies Institute).
+ * For a list of contributors see the AUTHORS file at the top-level directory of this distribution.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ * http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+package at.tugraz.sss.adapter.rest.v3.link;
+
+import at.tugraz.sss.adapter.rest.v3.SSRestMain;
+import at.tugraz.sss.serv.datatype.enums.*;
+import at.tugraz.sss.serv.datatype.par.*;
+import at.tugraz.sss.serv.db.api.*;
+import at.tugraz.sss.serv.reg.*;
+import at.tugraz.sss.serv.util.*;
+import at.tugraz.sss.servs.link.api.SSLinkClientI;
+import at.tugraz.sss.servs.link.datatype.par.SSLinkAddPar;
+import at.tugraz.sss.servs.link.datatype.ret.SSLinkAddRet;
+import io.swagger.annotations.*;
+import java.sql.*;
+import javax.annotation.*;
+import javax.ws.rs.Consumes;
+import javax.ws.rs.POST;
+import javax.ws.rs.Path;
+import javax.ws.rs.Produces;
+import javax.ws.rs.core.Context;
+import javax.ws.rs.core.HttpHeaders;
+import javax.ws.rs.core.MediaType;
+import javax.ws.rs.core.Response;
+
+@Path("/links")
+@Api( value = "links")
+public class SSRESTLink{
+  
+  @PostConstruct
+  public void createRESTResource(){
+  }
+  
+  @PreDestroy
+  public void destroyRESTResource(){
+  }
+  
+  @POST
+  @Consumes(MediaType.APPLICATION_JSON)
+  @Produces(MediaType.APPLICATION_JSON)
+  @ApiOperation(
+    value = "create a link",
+    response = SSLinkAddRet.class)
+  public Response linkAdd(
+    @Context
+    final HttpHeaders headers,
+    
+    final SSLinkAddRESTPar input){
+    
+    final SSLinkAddPar par;
+    Connection               sqlCon = null;
+    
+    try{
+      
+      try{
+        sqlCon = ((SSDBSQLI) SSServReg.getServ(SSDBSQLI.class)).createConnection();
+      }catch(Exception error){
+        return SSRestMain.prepareErrorResponse(error);
+      }
+      
+      try{
+        
+        par =
+          new SSLinkAddPar(
+            new SSServPar(((SSDBSQLI) SSServReg.getServ(SSDBSQLI.class)).createConnection()),
+            null, //user
+            input.link, //link
+            input.label, //label
+            input.description, //description
+            true, //withUserRestriction
+            true); //shouldCommit
+        
+      }catch(Exception error){
+        return Response.status(422).entity(SSRestMain.prepareErrorJSON(error)).build();
+      }
+      
+      try{
+        par.key = SSRestMain.getBearer(headers);
+      }catch(Exception error){
+        return Response.status(401).entity(SSRestMain.prepareErrorJSON(error)).build();
+      }
+      
+      try{
+        final SSLinkClientI linkServ = (SSLinkClientI) SSServReg.getClientServ(SSLinkClientI.class);
+        
+        return Response.status(200).entity(linkServ.linkAdd(SSClientE.rest, par)).build();
+        
+      }catch(Exception error){
+        return SSRestMain.prepareErrorResponse(error);
+      }
+    }finally{
+      
+      try{
+        
+        if(sqlCon != null){
+          sqlCon.close();
+        }
+      }catch(Exception error){
+        SSLogU.err(error);
+      }
+    }
+  }
+}
